@@ -30,6 +30,7 @@ import com.google.gerrit.server.config.PluginConfigFactory;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.eclipse.jgit.lib.Config;
 
@@ -54,7 +55,7 @@ public class GitilesWeblinks
 
     String baseGerritUrl;
     if (gerritUrl != null) {
-      URL u = new URL(gerritUrl);
+      URL u = URI.create(gerritUrl).toURL();
       baseGerritUrl = u.getPath();
     } else {
       baseGerritUrl = "/";
